--- a/templates/pages/surface.html
+++ b/templates/pages/surface.html
@@ -26,7 +26,7 @@
                 font-family: "MyLatin";
                 src: url("https://fonts.cdnfonts.com/s/12183/SourceSansPro-Light.woff");}
         .latin {
-            font-family: MyLatin;    
+            font-family: SourceSansLight;    
         }
         
     
@@ -55,8 +55,9 @@
         --blue: var(--nblue, blue);
         --tpField: #f8f8f8;
         --tpFieldMy: #e0e6e2fa;
-        --tpFont: MyFont;
-        --editorFont: var(--pb-content-font-family)
+        --tpFont: SourceSerifLight;
+        --editorFont: SourceSansRegular;
+        --lnrFont: SourceSansLightItalic;
         }
        #edView {
            margin: auto;
