--- a/templates/pages/ed.html
+++ b/templates/pages/ed.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="resources/css/mystyle.css"/>
     <script src="resources/scripts/myfunctions.js"/>
     <script src="resources/scripts/fix-ed-nav.js"/>
+    <script src="resources/scripts/ed.js"/>
     <script type="module" src="pb-components-bundle.js" data-template="pages:load-components"/>
     <style>
-        
        
         pb-page[unresolved] {
             display: none;
@@ -27,7 +27,7 @@
             --pb-grid-column-gap: 2em;
             --pb-facsimile-height: calc(var(--pb-view-height) - 22px);
          --highlight: yellow;
-         --pb-content-font-family: MyFont;
+         
          --pb-content-font-size: 16px;
          --radius: 1em 1em;
          --red-marking: red;
@@ -36,6 +36,10 @@
          --red: #dc3545;
           --nblack2: #46494c;
         --typesetter_black: #373a3d;
+        --ed-content-font-family: SourceSerifRegular;
+        --editorFont: SourceSansRegular;
+        --lnrFont: SourceSansLightItalic;
+        --pb-content-font-family: SourceSansRegular;
         --blue: blue;
         }
 
