justified text in ED per ODD

--- a/resources/css/theme.css
+++ b/resources/css/theme.css
@@ -16,6 +16,7 @@ div#pageInfo {
     width: 20%;
     position: relative;
     height: 100%;
+    left: 2.5em;
 }
 .noDisplay {
     display: none;   
