--- a/templates/toolbar.html
+++ b/templates/toolbar.html
@@ -17,24 +17,25 @@
     <pb-zoom emit="transcription" direction="out" icon="icons:zoom-out"/>
     <span>
         <paper-icon-button id="toggleFacsimile" class="mynav" icon="image:photo" data-i18n="[title]myapp.menu.toggleFacsimile" data-target="#facsimile"/>
-        <paper-icon-button id="toggleED" class="mynav" icon="icons:chrome-reader-mode" data-i18n="[title]myapp.menu.toggleED" data-target="#edView"/>
+       <!-- <paper-icon-button id="toggleED" class="mynav" icon="icons:chrome-reader-mode" data-i18n="[title]myapp.menu.toggleED" data-target="#edView"/> -->
         <paper-icon-button id="toggleInfo" class="mynav" icon="icons:description" data-i18n="[title]myapp.menu.toggleInfo" data-target="#pageInfo"/>
         <a id="timelineButton" data-i18n="[title]myapp.menu.showTimeline" data-template="pages:timeline-link">
             <paper-icon-button id="showTimeline" class="mynav" icon="icons:history"/>
         </a>
+         <!--
         <a id="transcriptionButton" data-i18n="[title]myapp.menu.showTranscription" data-source="version.html" data-link="surface.html" data-template="pages:toggle-link">
             <paper-icon-button id="showTimeline" class="mynav" icon="editor:title"/>
         </a>
         <a id="transcriptionButton" data-i18n="[title]myapp.menu.showTranscription" data-source="show-facsimile.html" data-link="surface.html&amp;show=facsimile" data-template="pages:toggle-link">
             <paper-icon-button id="showTimeline" class="mynav" icon="editor:title"/>
         </a>
-         <a id="facsimileButton" data-i18n="[title]myapp.menu.showTranscription" data-source="version.html surface.html" data-link="show-facsimile.html" data-template="pages:toggle-link">
+        <a id="facsimileButton" data-i18n="[title]myapp.menu.showTranscription" data-source="version.html surface.html" data-link="show-facsimile.html" data-template="pages:toggle-link">
             <paper-icon-button id="showTimeline" class="mynav" icon="image:collections"/>
-        </a>
+        </a> 
          <a id="versionButton" data-i18n="[title]myapp.menu.showTranscription" data-source="show-facsimile.html" data-link="version.html" data-template="pages:toggle-link">
             <paper-icon-button id="showTimeline" class="mynav" icon="icons:track-changes"/>
-        </a>
-        <!-- <paper-icon-button id="toggleFullscreen" class="mynav" icon="icons:fullscreen-exit" data-alt-icon="icons:fullscreen" data-i18n="[title]myapp.menu.toggleInfo" data-target="#mymenu"/> -->
+        </a> 
+         <paper-icon-button id="toggleFullscreen" class="mynav" icon="icons:fullscreen-exit" data-alt-icon="icons:fullscreen" data-i18n="[title]myapp.menu.toggleInfo" data-target="#mymenu"/> -->
     </span>
     <pb-navigation emit="transcription" keyboard="left" subscribe="transcription" direction="backward" unit="page">
         <paper-icon-button icon="icons:chevron-left"/>
